src/css/styles.scss
:root {
    /*------ Color variables ------*/
    /* background colors */
    --dark-grey: rgba(61, 61, 61, 1);
    --dark-white: #f7f7f7;
 
    /* text colors */
    --light-text: rgb(167, 167, 167);
 
    /* shadow colors */
    --light-shadow: rgb(187, 187, 187);
    --dark-shadow: rgb(97, 97, 97);
 }

html {
    font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
    font-size: 10px;
}

html * {
    margin: 0;
    padding: 0;
}

p {
    font-size: 1.6rem;
}

#wrapper {
    position: relative;
    left: 50%;
    width: 230px;
    margin: 50px -115px;
    background-color: white;
    border-radius: 30px;
}

#output {
    text-align: center;
    border: dotted .5px red;
    border-radius: 30px 30px 0 0;

    padding: .8rem;
    
    color: var(--light-shadow);
    
    p {
        font-size: 3.2rem;
    }
}

#input-area {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;

    margin: 0 .5rem;

}

.input-field {
    position: relative;
    top: .5rem;

    text-align: center;

    label {
        position: relative;
        bottom: 1.6rem;
        font-size: 1rem;
    }
}

[type = number] {
    width: 10rem;
    height: 10rem;
    
    text-align: center;
    font-size: 1.6rem;
    
    border-radius: 30px;
    border: solid .5px var(--light-shadow);
    
}

[type = number]:hover {
    -moz-box-shadow: 0 0 1.5rem;
    -webkit-box-shadow: 0 0 1.5rem;
    -o-box-shadow: 0 0 1.5rem;
    box-shadow: 0 0 1.5rem #44c2fc;
    
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    /* display: none; <- Crashes Chrome on hover */
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

input[type=number] {
    -moz-appearance:textfield; /* Firefox */
}

.dark-shadow {
    -moz-box-shadow: 0 0 1.5rem;
    -webkit-box-shadow: 0 0 1.5rem;
    -o-box-shadow: 0 0 1.5rem;
    box-shadow: 0 0 1.5rem var(--dark-shadow);
}

.light-shadow {
    -moz-box-shadow: 0 0 1.5rem;
    -webkit-box-shadow: 0 0 1.5rem;
    -o-box-shadow: 0 0 1.5rem;
    box-shadow: 0 0 1.5rem var(--light-shadow);
}

